k8s-local/service-mock.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-server
  labels:
    app: mock-server
spec:
  selector:
    app: mock-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
