k8s-local/ingress-mock-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /mock(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mock-server
                port:
                  number: 3000
